refactoring and fixed theme bug

--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ body {
   --secondary: #1f2328;
 
   --gray: #59636e;
-  --gray-100: #e9edf0;
+  --gray-100: #f7f8fa;
   --gray-101: #eff2f5;
   --gray-border: #d0d9e0;
   --gray-collapseopen: #f2f3f4;
